--- a/package.json
+++ b/package.json
@@ -4,10 +4,21 @@
   "description": "weekend assignment 7",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node server",
+    "start:dev": "PORT=3000 SYNC=true DATABASE_URL=postgres://localhost/acme_angular_week7 nodemon server"
   },
   "author": "Tom Trasmontero",
   "license": "ISC",
-  "dependencies": {},
+  "dependencies": {
+    "angular": "^1.5.8",
+    "angular-ui-router": "^0.3.1",
+    "body-parser": "^1.15.2",
+    "bootstrap": "^3.3.7",
+    "express": "^4.14.0",
+    "pg": "^6.1.0",
+    "sequelize": "^3.24.3",
+    "swig": "^1.4.2"
+  },
   "devDependencies": {}
 }
